--- a/css/perfil.css
+++ b/css/perfil.css
@@ -13,7 +13,7 @@ body {
 .contenedor-header {
     width: 100%;
     height: 70px;
-    background-color: #419CCA;
+    background-color: #0A96F7;
     display: grid;
     grid-template-columns: 200px 200px;
     grid-template-rows: 90px;
@@ -21,6 +21,15 @@ body {
     align-content: center;
     justify-content: right;
     position: relative;
+}
+
+.contenedor-header::after {
+    content: '';
+    top: 70px;
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    background-color: #fff;
 }
 
 .contenedor-header .header1 {
@@ -48,7 +57,8 @@ body {
 .contenido .presentacion {
     height: 500px;
     /* background-color: #C4C4C6; */
-    background-color: #a1a1a1;
+    /* background-color: #a1a1a1; */
+    background: linear-gradient(70deg, #6FC0F9 7%, #0A96F7 20%);
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr;
@@ -198,7 +208,7 @@ body {
 }
 
 footer {
-    background-color: #419CCA;
+    background: linear-gradient(70deg, #6FC0F9 7%, #0A96F7 20%);
     border: 1px solid black;
     box-shadow: -100px -100px -100px #baba;
     display: grid;
