--- a/css/store.css
+++ b/css/store.css
@@ -37,7 +37,7 @@ body {
     background-size: cover;
     /* background: 300deg, #baba 20%, #ffbaba 80%; */
     background-color: #e0e6e6;
-    font-family: 'Ubuntu', sans-serif;
+    font-family: 'Oswald', sans-serif;
 }
 
 .burger-button {
@@ -79,6 +79,7 @@ h2:hover {
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     /* background-color: #419CCA; */
     background: linear-gradient(-90deg, #6FC0F9 10%, #0A96F7 80%);
+    /*background: linear-gradient(), rgba(red, green, blue, .3); */
     margin: 0;
     padding: 0;
     justify-items: center;
@@ -661,7 +662,7 @@ h2:hover {
     line-height: 40px;
     font-size: 1em;
     text-align: center;
-    background: #419CCA;
+    background: linear-gradient(-180deg, #6FC0F9 10%, #0A96F7 100%);
     padding: .5em .5em;
     margin: 5px;
     text-decoration: none;
@@ -745,7 +746,7 @@ h2:hover {
     line-height: 40px;
     font-size: 1em;
     text-align: center;
-    background: #419CCA;
+    background: linear-gradient(-180deg, #6FC0F9 10%, #0A96F7 100%);
     padding: .5em .5em;
     margin: 5px;
     text-decoration: none;
@@ -775,16 +776,8 @@ h2:hover {
 
 footer {
     background: linear-gradient(70deg, #6FC0F9 7%, #0A96F7 20%);
-    /* background-color: #419CCA; */
-    border: 1px solid black;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr;
-    position: relative;
-    z-index: 5;
     text-align: center;
     margin-top: 100px;
-    padding: 10px 15px;
     gap: 20px;
 }
 
@@ -821,12 +814,30 @@ footer .social-desa h1 {
 footer .social-desa a img {
     width: 50px;
     margin: 0 20px;
+    transform: scale();
+}
+
+footer .social-desa a img:hover {
+    animation-name: aumentar;
+    animation-duration: .5s;
+    animation-timing-function: ease-in-out;
+    animation-fill-mode: forwards;
+}
+
+@keyframes aumentar {
+    0% {
+        transform: scale(1);
+    }
+    100% {
+        transform: scale(1.5);
+    }
 }
 
 footer .social-desa h3 {
     font-size: 1em;
     font-style: italic;
     color: white;
+    margin-bottom: 30px;
 }
 
 footer .social-desa h3 img {
