--- a/mediaquery_store/media_320px.css
+++ b/mediaquery_store/media_320px.css
@@ -228,3 +228,371 @@ h2:hover {
     font-size: 20px;
     border-radius: 100%;
 }
+
+
+/* accesorio celular  */
+
+.contenido .accesorios .celulares {
+    height: 365px;
+    padding: 10px;
+    margin: 0 50px;
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+    grid-template-rows: 1fr;
+    gap: 0 10px;
+    overflow-x: scroll;
+}
+
+.contenido .accesorios .celulares::-webkit-scrollbar {
+    height: 10px;
+    background: #fff;
+    border-radius: 5px;
+}
+
+
+/* con thumb se accede a la barra */
+
+.contenido .accesorios .celulares::-webkit-scrollbar-thumb {
+    background: #419CCA;
+    border-radius: 5px;
+}
+
+.contenido .accesorios .celulares .accesorio-celular {
+    display: grid;
+    grid-template-rows: 40px 200px 60px;
+    align-items: center;
+    width: 225px;
+    margin: auto 5px;
+    border: 1px solid #bababa;
+    font-weight: bold;
+    border-radius: 7px;
+    box-shadow: 5px 5px 5px #baba;
+}
+
+.contenido .accesorios .celulares .accesorio-celular h3 {
+    /* color: #419CCA; */
+    line-height: 40px;
+    height: 40px;
+    font-size: .9em;
+    margin: 0;
+}
+
+.contenido .accesorios .celulares .accesorio-celular img {
+    width: 70%;
+    height: 70%;
+    justify-self: center;
+}
+
+.contenido .accesorios .celulares .accesorio-celular a {
+    line-height: 40px;
+    font-size: 1em;
+    text-align: center;
+    background: linear-gradient(-180deg, #6FC0F9 10%, #0A96F7 100%);
+    padding: .5em .5em;
+    margin: 5px;
+    text-decoration: none;
+    border: none;
+    border-radius: 10px;
+    /* box-shadow: inset x y; */
+    box-shadow: inset 0 -.2em rgba(0, 0, 0, .2);
+    color: #fff;
+    cursor: pointer;
+    /* para quitar el color del borde cuando se da click */
+    outline: none;
+    transition: .2s;
+    will-change: transform;
+}
+
+.contenido .accesorios .celulares .accesorio-celular a:hover {
+    color: #f3ff3b;
+    font-weight: bolder;
+}
+
+.contenido .accesorios .celulares .accesorio-celular a:active {
+    transform: scale(.9);
+}
+
+
+/*estilos para accesorios computadores*/
+
+.contenido .accesorios .pc {
+    height: 365px;
+    padding: 10px;
+    margin: 0 50px;
+    display: grid;
+    grid-template-columns: repeat(15, 1fr);
+    grid-template-rows: 1fr;
+    overflow: scroll;
+    overflow-y: unset;
+    align-items: center;
+}
+
+.contenido .accesorios .pc::-webkit-scrollbar {
+    height: 10px;
+    background: #fff;
+    border-radius: 5px;
+}
+
+
+/* con thumb se accede a la barra */
+
+.contenido .accesorios .pc::-webkit-scrollbar-thumb {
+    background: #419CCA;
+    border-radius: 5px;
+}
+
+.contenido .accesorios .pc .accesorio-pc {
+    display: grid;
+    grid-template-rows: 40px 200px 60px;
+    align-items: center;
+    width: 225px;
+    margin: auto 10px;
+    border: 1px solid #bababa;
+    font-weight: bold;
+    border-radius: 7px;
+    box-shadow: 5px 5px 5px #baba;
+}
+
+.contenido .accesorios .pc .accesorio-pc h3 {
+    line-height: 40px;
+    height: 40px;
+    font-size: .9em;
+    margin: 0;
+}
+
+.contenido .accesorios .pc .accesorio-pc img {
+    width: 80%;
+    height: 90%;
+    justify-self: center;
+}
+
+.contenido .accesorios .pc .accesorio-pc a {
+    text-decoration: none;
+    line-height: 40px;
+    font-size: 1em;
+    text-align: center;
+    background: linear-gradient(-180deg, #6FC0F9 10%, #0A96F7 100%);
+    padding: .5em .5em;
+    margin: 5px;
+    text-decoration: none;
+    border: none;
+    border-radius: 10px;
+    /* box-shadow: inset x y; */
+    box-shadow: inset 0 -.2em rgba(0, 0, 0, .2);
+    color: #fff;
+    cursor: pointer;
+    /* para quitar el color del borde cuando se da click */
+    outline: none;
+    transition: .2s;
+    will-change: transform;
+}
+
+.contenido .accesorios .pc .accesorio-pc a:hover {
+    color: #f3ff3b;
+    font-weight: bolder;
+}
+
+.contenido .accesorios .pc .accesorio-pc a:active {
+    transform: scale(.9);
+}
+
+
+/* estilos trabajo */
+
+.contenido .mi_trabajo {
+    margin-top: 100px;
+}
+
+.contenido .mi_trabajo .formateo {
+    position: relative;
+    text-align: center;
+    margin: 0 50px;
+}
+
+.contenido .mi_trabajo .formateo .title {
+    font-size: 1em;
+    color: #c28604;
+    margin-top: 60px;
+}
+
+.contenido .mi_trabajo .formateo .sistemas_operativos {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: .2fr 1fr .2fr;
+    border: 1px solid black;
+}
+
+.contenido .mi_trabajo .formateo .sistemas_operativos .titulo {
+    margin-top: 20px;
+    align-self: center;
+    justify-self: center;
+}
+
+.contenido .mi_trabajo .formateo .sistemas_operativos .linux {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+    gap: 10px;
+    height: 220px;
+    padding-bottom: 20px;
+    justify-items: center;
+    overflow-x: auto;
+}
+
+.contenido .mi_trabajo .formateo .sistemas_operativos .linux .titulo {
+    justify-items: center;
+    align-self: center;
+}
+
+.contenido .mi_trabajo .formateo .sistemas_operativos .linux .linux-distribuciones {
+    display: grid;
+    grid-template-columns: repeat(8, 1fr);
+    grid-template-rows: 1fr;
+    padding: 0 20px;
+    align-self: center;
+}
+
+.contenido .mi_trabajo .formateo .sistemas_operativos .linux .linux-distribuciones .sistemas {
+    display: grid;
+    grid-template-rows: 50px 1fr;
+    align-items: center;
+    text-align: center;
+    justify-items: center;
+    width: 200px;
+    height: 180px;
+    margin: 0 20px;
+    border: 1px solid gray;
+    box-shadow: -8px 10px 10px #AEB2B2;
+    border-radius: 20px;
+}
+
+.contenido .mi_trabajo .formateo .sistemas_operativos .linux .linux-distribuciones .sistemas h4 {
+    color: #000;
+    font-size: 1.2rem;
+}
+
+.contenido .mi_trabajo .formateo .sistemas_operativos .linux .linux-distribuciones .sistemas img {
+    width: 50%;
+    text-align: center;
+}
+
+.contenido .mi_trabajo .formateo .sistemas_operativos .windows {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+    gap: 10px;
+    height: 220px;
+    justify-items: center;
+    overflow-x: auto;
+}
+
+.contenido .mi_trabajo .formateo .sistemas_operativos .windows .titulo {
+    justify-items: center;
+    align-self: center;
+}
+
+.contenido .mi_trabajo .formateo .sistemas_operativos .windows .windows-distribuciones {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 1fr;
+    padding: 0 20px;
+    align-self: center;
+}
+
+.contenido .mi_trabajo .formateo .sistemas_operativos .windows .windows-distribuciones .sistemas {
+    display: grid;
+    grid-template-rows: 50px 1fr;
+    align-items: center;
+    text-align: center;
+    justify-items: center;
+    width: 200px;
+    height: 180px;
+    margin: 0 20px;
+    border: 1px solid gray;
+    box-shadow: -10px 5px 15px 0px #AEB2B2;
+    border-radius: 20px;
+}
+
+.contenido .mi_trabajo .formateo .sistemas_operativos .windows .windows-distribuciones .sistemas h4 {
+    color: #000;
+    font-size: 1.2rem;
+}
+
+.contenido .mi_trabajo .formateo .sistemas_operativos .windows .windows-distribuciones .sistemas img {
+    width: 50%;
+    text-align: center;
+}
+
+
+/* footer */
+
+footer {
+    background: linear-gradient(70deg, #6FC0F9 7%, #0A96F7 20%);
+    text-align: center;
+    margin-top: 100px;
+    gap: 20px;
+}
+
+footer .info-desa {
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+    text-align: center;
+}
+
+footer .info-desa h3 {
+    font-size: 1em;
+    font-style: italic;
+    color: white;
+    margin-left: 80px;
+    /* box-shadow: 2px 2px 2px gray; */
+}
+
+footer .info-desa h3 img {
+    width: 40px;
+}
+
+footer .social-desa {
+    grid-column-start: 2;
+    grid-column-end: 3;
+}
+
+footer .social-desa h1 {
+    color: #f3ff3b;
+    font-size: 1.5em;
+    font-style: italic;
+    letter-spacing: 5px;
+    font-weight: bolder;
+}
+
+footer .social-desa a img {
+    width: 50px;
+    margin: 0 20px;
+    transform: scale();
+}
+
+footer .social-desa a img:hover {
+    animation-name: aumentar;
+    animation-duration: .5s;
+    animation-timing-function: ease-in-out;
+    animation-fill-mode: forwards;
+}
+
+@keyframes aumentar {
+    0% {
+        transform: scale(1);
+    }
+    100% {
+        transform: scale(1.5);
+    }
+}
+
+footer .social-desa h3 {
+    font-size: 1em;
+    font-style: italic;
+    color: white;
+    margin-bottom: 30px;
+}
+
+footer .social-desa h3 img {
+    width: 30px;
+    padding-right: 10px;
+}
