--- a/mediaquery_store/media_320px.css
+++ b/mediaquery_store/media_320px.css
@@ -551,10 +551,10 @@ footer .info-desa h3 img {
 
 footer .social-desa h1 {
     color: #f3ff3b;
-    font-size: 1.5em;
+    font-size: 2rem;
+    font-weight: 400;
     font-style: italic;
     letter-spacing: 5px;
-    font-weight: bolder;
 }
 
 footer .social-desa a img {
@@ -580,8 +580,9 @@ footer .social-desa a img:hover {
 }
 
 footer .social-desa h3 {
-    font-size: 1em;
+    font-size: 1.5rem;
     font-style: italic;
+    font-weight: 300;
     color: white;
     margin-bottom: 30px;
 }
