--- a/mediaquery_store/media_320px.css
+++ b/mediaquery_store/media_320px.css
@@ -207,6 +207,54 @@ h2:hover {
     margin: 10px 0;
 }
 
+
+/* ----------------------- */
+
+.contenido .container {
+    margin: 0;
+    padding: 30px;
+    background-color: aqua;
+    width: 100%;
+}
+
+.contenido .container ul li {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+.contenido .container ul.slider {
+    position: relative;
+    width: 800px;
+    height: 300px;
+}
+
+.contenido .container ul.slider li {
+    position: absolute;
+    opacity: 0;
+    width: inherit;
+    height: inherit;
+    background-color: white;
+    transition: opacity 1s;
+}
+
+.contenido .container ul.slider li img {
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
+}
+
+.contenido .container ul.slider li:first-child {
+    opacity: 1;
+}
+
+.contenido .container ul.slider li:target {
+    opacity: 1;
+}
+
+
+/* ----------------------- */
+
 .contenido .container .menu {
     text-align: center;
     margin-top: 60px;
@@ -228,6 +276,98 @@ h2:hover {
     font-size: 20px;
     border-radius: 100%;
 }
+
+
+/* ------------------------------- */
+
+.contenido .presentacion {
+    justify-content: center;
+    position: relative;
+    /* width: 100%; */
+    height: 340px;
+    margin: 0 auto;
+    border: 2px solid #419CCA;
+    object-fit: cover;
+}
+
+.contenido .presentacion .preacce {
+    text-align: center;
+}
+
+.contenido .presentacion .p1 {
+    width: 100%;
+    height: inherit;
+    background-image: url('../assets/img/presentacion/p1.gif');
+    background-size: 100% 100%;
+    /* background-repeat: no-repeat; */
+}
+
+.contenido .presentacion .p2 {
+    width: 100%;
+    height: inherit;
+    display: none;
+    background-image: url('../assets/img/presentacion/p1.gif');
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+
+.contenido .presentacion .p3 {
+    width: 100%;
+    height: inherit;
+    display: none;
+    background-image: url('../assets/img/presentacion/p1.gif');
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+
+
+/* 
+.contenido .presentacion .btn {
+    color: white;
+    font-size: 70px;
+    position: absolute;
+    top: 40%;
+    background-color: rgba(186, 186, 186, .9);
+    padding: 0 10px;
+    cursor: pointer;
+}
+
+.contenido .presentacion .btn:hover {
+    background-color: #E8B349;
+    transition: .7s;
+} */
+
+.contenido .presentacion .iz {
+    left: 10px;
+    border-radius: 50%;
+}
+
+.contenido .presentacion .dere {
+    right: 10px;
+    border-radius: 50%;
+}
+
+.contenido .presentacion .page {
+    /* position: absolute; */
+    text-align: center;
+    left: 0px;
+    right: 0px;
+    bottom: 10px;
+    padding-right: 10px;
+}
+
+.contenido .presentacion .page li {
+    display: inline-block;
+    list-style: none;
+    width: 30px;
+    height: 30px;
+    margin-left: 30px;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+
+/* ------------------------------- */
 
 
 /* accesorio celular  */
@@ -527,20 +667,17 @@ footer {
     background: linear-gradient(70deg, #6FC0F9 7%, #0A96F7 20%);
     text-align: center;
     padding-top: 50px;
-    padding: 50px 0;
+    padding: 10px 0;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 }
 
-footer .info-desa {
-    /* text-align: center; */
-}
-
 footer .info-desa h3 {
     font-weight: 300;
     font-size: 1.2em;
+    line-height: 10px;
     font-style: italic;
     color: white;
 }
@@ -555,6 +692,7 @@ footer .social-desa h1 {
     font-weight: 400;
     font-style: italic;
     letter-spacing: 5px;
+    line-height: 10px;
 }
 
 footer .social-desa a img {
