--- a/mediaquery_store/media_320px.css
+++ b/mediaquery_store/media_320px.css
@@ -86,6 +86,7 @@ h2:hover {
     justify-items: center;
     align-items: center;
     position: relative;
+    display: none;
 }
 
 .header #menu-h .desplegar {
