--- a/mediaquery_store/media_320px.css
+++ b/mediaquery_store/media_320px.css
@@ -56,7 +56,7 @@ body {
     line-height: 50px;
     text-align: center;
     right: 0;
-    z-index: 1;
+    z-index: 20;
 }
 
 h2 {
@@ -78,15 +78,34 @@ h2:hover {
     color: #fff;
 }
 
+
+/* 
 .header {
     background: linear-gradient(-90deg, #6FC0F9 10%, #0A96F7 80%);
-    /*background: linear-gradient(), rgba(red, green, blue, .3); */
     margin: 0;
     padding: 0;
     justify-items: center;
     align-items: center;
     position: relative;
     display: none;
+} */
+
+.header {
+    background-color: rgba(0, 0, 0, .4);
+    top: 0;
+    /* right: 0; */
+    bottom: 0;
+    width: 50vw;
+    right: 780px;
+    padding-top: 70px;
+    position: fixed;
+    display: block;
+    z-index: 10;
+    transition: .5s;
+}
+
+.header.is-active {
+    right: 0;
 }
 
 .header #menu-h .desplegar {
@@ -130,12 +149,12 @@ h2:hover {
     text-decoration: none;
     text-align: left;
     display: block;
-    z-index: 3;
+    /* z-index: 3; */
 }
 
 .header #menu-h {
     text-align: center;
-    background-color: red;
+    /* background-color: red; */
 }
 
 .header #menu-h img {
