--- a/mediaquery_store/media_320px.css
+++ b/mediaquery_store/media_320px.css
@@ -95,8 +95,8 @@ h2:hover {
     top: 0;
     /* right: 0; */
     bottom: 0;
-    width: 50vw;
-    right: 780px;
+    width: 70vw;
+    right: -780px;
     padding-top: 70px;
     position: fixed;
     display: block;
@@ -154,7 +154,6 @@ h2:hover {
 
 .header #menu-h {
     text-align: center;
-    /* background-color: red; */
 }
 
 .header #menu-h img {
@@ -295,6 +294,20 @@ h2:hover {
     height: 20px;
     font-size: 20px;
     border-radius: 100%;
+}
+
+
+/* ------------------------------- */
+
+.contenido .logo {
+    width: 100vw;
+    text-align: center;
+    background: linear-gradient(70deg, #6FC0F9 7%, #0A96F7 20%);
+}
+
+.contenido .logo img {
+    width: 120px;
+    height: 90px;
 }
 
 
@@ -685,9 +698,10 @@ h2:hover {
 
 .contenido .mi_trabajo .formateo .programas {
     width: 90%;
+    height: auto;
     display: inline-block;
     position: relative;
-    height: 300px;
+    /* height: 300px; */
     margin: 10px 0;
 }
 
@@ -796,8 +810,8 @@ h2:hover {
 footer {
     background: linear-gradient(70deg, #6FC0F9 7%, #0A96F7 20%);
     text-align: center;
-    margin-top: 100px;
-    padding-top: 50px;
+    margin-top: 50px;
+    /* padding-top: 50px; */
     padding: 10px 0;
     display: flex;
     flex-direction: column;
