--- a/mediaquery_perfil/perfil_320px.css
+++ b/mediaquery_perfil/perfil_320px.css
@@ -1,21 +1,87 @@
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap');
+
+/* icono de menu  */
+
+@font-face {
+    font-family: 'icomoon';
+    src: url('../fonts/icomoon.eot?3ot2jt');
+    src: url('../fonts/icomoon.eot?3ot2jt#iefix') format('embedded-opentype'), url('../fonts/icomoon.ttf?3ot2jt') format('truetype'), url('../fonts/icomoon.woff?3ot2jt') format('woff'), url('../fonts/icomoon.svg?3ot2jt#icomoon') format('svg');
+    font-weight: normal;
+    font-style: normal;
+    font-display: block;
+}
+
+[class^="icon-"],
+[class*=" icon-"] {
+    /* use !important to prevent issues with browser extensions that change fonts */
+    font-family: 'icomoon' !important;
+    speak: never;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+    /* Better Font Rendering =========== */
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-menu:before {
+    content: "\e9bd";
+}
+
 body {
     margin: 0;
     font-family: 'Ubuntu', sans-serif;
 }
 
+.burger-button {
+    /* display: none; */
+    margin: 10px;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: rgba(253, 171, 1, .7);
+    color: #fff;
+    line-height: 50px;
+    text-align: center;
+    right: 0;
+    z-index: 10;
+    position: fixed;
+}
+
+.contenedor-header {
+    background-color: rgba(0, 0, 0, .4);
+    top: 0;
+    /* right: 0; */
+    bottom: 0;
+    width: 70vw;
+    right: -780px;
+    padding-top: 70px;
+    position: fixed;
+    display: block;
+    z-index: 1;
+    transition: .5s;
+}
+
+.contenedor-header.is-active {
+    right: 0;
+}
+
+
+/* 
 .contenedor-header {
     width: 100%;
     height: 70px;
     background-color: #0A96F7;
-    display: grid;
+    display: none;
     grid-template-columns: 200px 200px;
     grid-template-rows: 90px;
     align-items: center;
     align-content: center;
     justify-content: right;
     position: relative;
-}
+} */
 
 .contenedor-header .header1 {
     margin-right: 80px;
@@ -41,8 +107,6 @@ body {
 
 .contenido .presentacion {
     height: 500px;
-    /* background-color: #C4C4C6; */
-    /* background-color: #a1a1a1; */
     background: linear-gradient(70deg, #6FC0F9 7%, #0A96F7 20%);
     display: grid;
     grid-template-columns: 1fr 1fr;
