--- a/mediaquery_perfil/perfil_320px.css
+++ b/mediaquery_perfil/perfil_320px.css
@@ -30,6 +30,7 @@
     content: "\e9bd";
 }
 
+html,
 body {
     margin: 0;
     font-family: 'Ubuntu', sans-serif;
@@ -46,21 +47,23 @@ body {
     line-height: 50px;
     text-align: center;
     right: 0;
-    z-index: 10;
+    z-index: 20;
     position: fixed;
 }
 
 .contenedor-header {
     background-color: rgba(0, 0, 0, .4);
     top: 0;
-    /* right: 0; */
     bottom: 0;
-    width: 70vw;
+    width: 50vw;
     right: -780px;
     padding-top: 70px;
     position: fixed;
-    display: block;
-    z-index: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    z-index: 10;
     transition: .5s;
 }
 
@@ -68,27 +71,10 @@ body {
     right: 0;
 }
 
-
-/* 
-.contenedor-header {
-    width: 100%;
-    height: 70px;
-    background-color: #0A96F7;
-    display: none;
-    grid-template-columns: 200px 200px;
-    grid-template-rows: 90px;
-    align-items: center;
-    align-content: center;
-    justify-content: right;
-    position: relative;
-} */
-
 .contenedor-header .header1 {
-    margin-right: 80px;
+    font-size: 2rem;
     font-weight: bolder;
-    text-align: center;
-    align-items: center;
-    justify-self: right;
+    margin-bottom: 50px;
 }
 
 .contenedor-header .header1 a {
@@ -106,11 +92,12 @@ body {
 }
 
 .contenido .presentacion {
-    height: 500px;
+    height: auto;
+    width: 100vw;
     background: linear-gradient(70deg, #6FC0F9 7%, #0A96F7 20%);
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr;
     padding: 10px;
     text-align: center;
 }
