--- a/mediaquery_perfil/perfil_320px.css
+++ b/mediaquery_perfil/perfil_320px.css
@@ -243,60 +243,70 @@ body {
     padding: 0 5px;
 }
 
+
+/* footer */
+
 footer {
     background: linear-gradient(70deg, #6FC0F9 7%, #0A96F7 20%);
-    border: 1px solid black;
-    box-shadow: -100px -100px -100px #baba;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr;
-    position: relative;
-    z-index: 5;
     text-align: center;
-    margin-top: 100px;
-    padding: 10px 15px;
-    gap: 20px;
-}
-
-footer .info-desa {
-    grid-template-rows: 1fr 1fr 1fr 1fr;
-    text-align: center;
+    margin-top: 50px;
+    /* padding-top: 50px; */
+    padding: 10px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 footer .info-desa h3 {
-    font-size: 1em;
+    font-weight: 300;
+    font-size: 1.2em;
+    line-height: 10px;
     font-style: italic;
     color: white;
-    margin-left: 80px;
-    /* box-shadow: 2px 2px 2px gray; */
 }
 
 footer .info-desa h3 img {
     width: 40px;
 }
 
-footer .social-desa {
-    grid-column-start: 2;
-    grid-column-end: 3;
-}
-
-footer .social-desa h2 {
+footer .social-desa h1 {
     color: #f3ff3b;
-    font-size: 1.3em;
+    font-size: 1.5rem;
+    font-weight: 400;
     font-style: italic;
     letter-spacing: 5px;
-    font-weight: bolder;
+    line-height: 10px;
 }
 
 footer .social-desa a img {
     width: 50px;
     margin: 0 20px;
+    transform: scale();
+}
+
+footer .social-desa a img:hover {
+    animation-name: aumentar;
+    animation-duration: .5s;
+    animation-timing-function: ease-in-out;
+    animation-fill-mode: forwards;
+}
+
+@keyframes aumentar {
+    0% {
+        transform: scale(1);
+    }
+    100% {
+        transform: scale(1.5);
+    }
 }
 
 footer .social-desa h3 {
-    font-size: 1em;
+    font-size: 1rem;
     font-style: italic;
+    font-weight: 300;
     color: white;
+    margin-bottom: 30px;
 }
 
 footer .social-desa h3 img {
