--- a/mediaquery_index/mobile.css
+++ b/mediaquery_index/mobile.css
@@ -1,4 +1,4 @@
-@media screen and (min-width: 320px) and (max-width: 500px) {
+@media screen and (min-width: 320px) {
     body {
         margin: 0;
         font-family: 'Roboto mono', monospace;
