--- a/mediaquery_index/mobile.css
+++ b/mediaquery_index/mobile.css
@@ -1,102 +1,113 @@
-@media screen and (min-width: 320px) {
-    body {
-        margin: 0;
-        font-family: 'Roboto mono', monospace;
-        min-width: 320px;
-        max-width: 422px;
-    }
-    .pages {
-        display: grid;
-        grid-template-rows: 1fr 1fr;
-        width: 100%;
-        height: 100vh;
-        position: fixed;
-        background: url('../assets/img/street.jpg')no-repeat center center/cover;
-    }
-    .pages .home-main-text {
-        width: 100vw;
-        display: flex;
-        align-self: center;
-        justify-content: center;
-    }
-    .pages .home-main-text p {
-        font-size: 4.7rem;
-        letter-spacing: 15px;
-        color: #fff;
-        background-color: rgba(187, 170, 187, .2);
-        padding: 40px;
-        border-radius: 20px;
-        text-shadow: 3px 3px 2px #baba;
-        text-align: center;
-        /* min-width: 320px;
+body {
+    margin: 0;
+    font-family: 'Roboto mono', monospace;
+    /* min-width: 400px;
+    max-width: 422px; */
+}
+
+.pages {
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    background: url('../assets/img/street.jpg')no-repeat center center/cover;
+}
+
+.pages .home-main-text {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.pages .home-main-text p {
+    width: 600px;
+    /* min-width: 500px;
+    max-width: 499px; */
+    height: auto;
+    font-size: 5rem;
+    letter-spacing: 15px;
+    color: #fff;
+    padding: 40px;
+    margin: 0 auto;
+    border-radius: 20px;
+    text-shadow: 3px 3px 2px #baba;
+    text-align: center;
+    /* min-width: 320px;
         max-width: 400px; */
-        /* animaciones  */
-        animation-name: welcome;
-        animation-duration: 2s;
-        animation-fill-mode: forwards;
+    /* animaciones  */
+    animation-name: welcome;
+    animation-duration: 2s;
+    animation-fill-mode: forwards;
+}
+
+@keyframes welcome {
+    0% {
+        transform: translateX(-700px);
     }
-    @keyframes welcome {
-        0% {
-            transform: translateX(-700px);
-        }
-        25% {
-            transform: translateX(100px);
-        }
-        55% {
-            transform: translateX(-100px);
-        }
-        75% {
-            transform: translateX(70px);
-        }
-        90% {
-            transform: translateX(-20px);
-        }
-        100% {
-            transform: translateX(0);
-        }
+    25% {
+        transform: translateX(100px);
     }
-    .pages .home-main-text p span {
-        color: #f9a801;
+    55% {
+        transform: translateX(-100px);
     }
-    .pages .enlaces {
-        display: flex;
-        flex-direction: column;
-        align-self: center;
-        justify-self: center;
+    75% {
+        transform: translateX(70px);
     }
-    .pages .enlaces .home-main-button {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        width: 400px;
-        min-width: 200px;
-        max-width: 250px;
+    90% {
+        transform: translateX(-20px);
     }
-    .pages .enlaces .home-main-button a {
-        height: 80px;
-        width: 350px;
-        font-size: 2.5em;
-        font-weight: bolder;
-        padding: 10px;
-        margin: 30px 0;
-        border: 2px solid #fff;
-        box-shadow: 5px -5px 10px #fff;
-        border-radius: 10px;
-        text-align: center;
-        text-decoration: none;
-        background-color: rgb(102, 95, 95);
-        color: #fff;
-        cursor: pointer;
-        transition: .5s;
-        display: flex;
-        align-items: center;
-        justify-content: center;
+    100% {
+        transform: translateX(0);
     }
-    .pages .enlaces .home-main-button a:hover {
-        color: #fff;
-        background: #f9a801;
-        /* background: linear-gradient(207, 8deg, #bababa 17%, #333fff 100%); */
-    }
+}
+
+.pages .home-main-text p span {
+    color: #f9a801;
+}
+
+.pages .enlaces {
+    display: flex;
+    flex-direction: column;
+    align-self: center;
+    justify-self: center;
+}
+
+.pages .enlaces .home-main-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 400px;
+    min-width: 200px;
+    max-width: 250px;
+}
+
+.pages .enlaces .home-main-button a {
+    height: 80px;
+    width: 350px;
+    font-size: 2.5em;
+    font-weight: bolder;
+    padding: 10px;
+    margin: 30px 0;
+    border: 2px solid #fff;
+    box-shadow: 5px -5px 10px #fff;
+    border-radius: 10px;
+    text-align: center;
+    text-decoration: none;
+    background-color: rgb(102, 95, 95);
+    color: #fff;
+    cursor: pointer;
+    transition: .5s;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.pages .enlaces .home-main-button a:hover {
+    color: #fff;
+    background: #f9a801;
+    /* background: linear-gradient(207, 8deg, #bababa 17%, #333fff 100%); */
 }
 
 @media screen and (min-width: 768px) {
