--- a/mediaquery_index/tablet.css
+++ b/mediaquery_index/tablet.css
@@ -1,4 +1,4 @@
-@media only screen and (min-width: 768px) {
+@media screen and (min-width: 768px) {
     .pages {}
     .pages .home-main-text p {
         /* font-size: 3rem; */
