--- a/mediaquery_store/media_320px.css
+++ b/mediaquery_store/media_320px.css
@@ -307,8 +307,7 @@ h2:hover {
 .contenido .presentacion {
     justify-content: center;
     position: relative;
-    /* width: 100%; */
-    height: 340px;
+    height: 250px;
     margin: 0 auto;
     border: 2px solid #419CCA;
     object-fit: cover;
@@ -346,7 +345,7 @@ h2:hover {
 
 .contenido .presentacion .btn {
     color: white;
-    font-size: 70px;
+    font-size: 40px;
     position: absolute;
     top: 40%;
     background-color: rgba(186, 186, 186, .9);
@@ -360,17 +359,17 @@ h2:hover {
 }
 
 .contenido .presentacion .iz {
-    left: 10px;
+    left: 1px;
     border-radius: 50%;
 }
 
 .contenido .presentacion .dere {
-    right: 10px;
+    right: 1px;
     border-radius: 50%;
 }
 
 .contenido .presentacion .page {
-    position: absolute;
+    /* position: absolute; */
     text-align: center;
     left: 0px;
     right: 0px;
